[Bug Fix] F1 Score: Weighted.

--- a/script.ipynb
+++ b/script.ipynb
@@ -189,12 +189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining Method for Confusion Matrix"
+    "# Defining Method for Showing Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
     "    plt.tight_layout()\n",
     "    \n",
     "def show_results(y_test, y_pred):\n",
-    "    print(\"F1 Score: \", f1_score(y_test, y_pred, average=\"macro\"))\n",
+    "    print(\"F1 Score: \", f1_score(y_test, y_pred, average=\"weighted\"))\n",
     "    print()\n",
     "    cnf_matrix = confusion_matrix(y_test, y_pred, labels=[0,1,2])\n",
     "    plot_confusion_matrix(cnf_matrix)"
@@ -356,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score:  0.6542958600540502\n",
+      "F1 Score:  0.6513667906126492\n",
       "\n"
      ]
     },
